Move slides for more fluid transitions

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@ def helloWorld = {
     <!-- 
         You can make dummy slides with no content to simply pan the camera
     -->
-    <section class="step" data-x="7500" data-y="-800">
+    <section class="step" data-x="7500">
     </section>
 
-    <div class="step" data-x="7500">
+    <div class="step" data-x="7500" data-y="800">
         <h2>Code example</h2>
         <pre><code class="scala">
 trait PerRequest extends Actor {
@@ -133,10 +133,10 @@ trait PerRequest extends Actor {
         </code></pre>
     </div>
 
-    <section class="step" data-x="7500" data-y="800">
+    <section class="step" data-x="7500" data-y="1600">
     </section>
 
-    <div class="step" data-x="9000" data-y="800">
+    <div class="step" data-x="9000" data-y="1600">
         <h2>Speaker notes</h2>
         <p>Press the 'p' key for speaker notes</p>
         <p>Write notes in a div with the 'notes' class</p>
@@ -145,7 +145,7 @@ trait PerRequest extends Actor {
         </div>
     </div>
 
-    <div class="step" data-x="10500" data-y="800">
+    <div class="step" data-x="10500" data-y="1600">
         <h2>That's it!</h2>
         <br />
         <br />
