Couldn't get paginate.sh to work yet, so commenting out for now

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
         <h2>Why Scala?</h2>
         <ul>
             <li>Scalable</li>
+            <ul>
+                <li>Codebase size</li>
+                <li>Multi core/node friendly</li>
+            </ul>
             <li>Concise and expressive</li>
             <li>Enjoyable to work with!</li>
         </ul>
