Fix link on front page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
             <span class="the">THE</span><br/>NET-A-PORTER<br/>GROUP
         </h2>
         <h1><em>Scala</em> Beginner Workshop</h1>
-        <h3>http://github.io/net-a-porter/scala-beginner-workshop</h3>
+        <h3>
+            <a href="http://net-a-porter.github.io/scala-beginner-workshop">
+                net-a-porter.github.io/scala-beginner-workshop
+            </a>
+        </h3>
     </section>
 
     <div class="step" data-x="0">
