--- a/index.html
+++ b/index.html
@@ -125,6 +125,14 @@ markdown = 0.7
         </code></pre>
     </div>
 
+    <div class="step" data-x="7500">
+        <h2>Task</h2>
+        <ul>
+            <li>Create a val and a var</li>
+            <li>Try to reassign a new value to them</li>
+        </ul>
+    </div>
+
     <section class="step" data-x="9000">
         <img src="images/valyuno.jpg" style="height:700px;" />
     </section>
