Corrected functions task

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ val funky = (<em>args</em>) => <em>body</em></code></pre>
 > large(Sku("1-10")) == true
 > large(Sku("1-9")) == false</code></pre>
 <br />
-        <p>Write the function <code>large</code>. It checks <code>sku.size</code> is > 10</p>
+        <p>Write the function <code>large</code>. It checks <code>sku.size</code> is >= 10</p>
     </div>
 
     <div class="step" data-x="49500">
